--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "nanoid": "^3.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-mde": "^11.5.0",
     "react-scripts": "5.0.0",
+    "react-split": "^2.0.14",
+    "showdown": "^2.0.3",
     "tree": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
